@@ -21,6 +21,9 @@ Changes
 - When calling R C-API's `R_ParseVector` and a error occurs, the
   exception message now contains the parsing status.
 
+- :mod:`rpy2.rinterface_lib.embedded` has a module-level "constant"
+  `DEFAULT_C_STACK_LIMIT` used when initializing the embedded R.
+
 Bugs fixed
 -----------
 
